--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="nav-list" id="navi-list">
             <li class="list-item">
-                <a class="index-b nav-link active" aria-current="page" href="drstrange.html">Início</a>
+                <a class="index-b nav-link active" aria-current="page" href="index.html">Início</a>
             </li>
             <li class="list-item">
                 <a class="index-b nav-link" href="#">Produtos</a>
